App is working with dynamic text input

--- a/index.html
+++ b/index.html
@@ -145,10 +145,15 @@
       </div>
       <br>
 
+      Script:<br/>
+      <textarea id="script"></textarea><br><br>
+
+
+
       <!-- added div#buttons -->
       <div id="buttons">
       <button id="connect-button" type="button">Connect</button>
-      <button id="talk-button" type="button">Start</button>
+      <button id="talk-button" type="button">Talk</button>
       <button id="destroy-button" type="button">Destroy</button>
     </div>
   
